--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <footer></footer>
   <script src="/node_modules/jquery/dist/jquery.min.js"></script>
   <!-- <script src="/javascripts/reduce.js"></script> -->
-  <script src="/javascripts/array-to-object.js"></script>
+  <!-- <script src="/javascripts/array-to-object.js"></script> -->
+  <script src="/javascripts/sorting-arrays-to-objects.js"></script>
 </body>
 </html>
